# dynamic

src/ctrl_gripper/: CMakeLists.txt  package.xml
src/ctrl_gripper/src/: add_two_ints_server.cpp  gripper.cpp
src/dynamixel-workbench/dynamixel_workbench_toolbox/examples/src/: h_Position.cpp  k_Read_Write.cpp  l_Sync_Write.cpp  m_Sync_Read_Write.cpp
src/dynamixel-workbench/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_item.h
src/dynamixel-workbench/dynamixel_workbench_toolbox/src/dynamixel_workbench_toolbox/: dynamixel_driver.cpp  dynamixel_workbench.cpp
src/open_manipulator/open_manipulator_x_controller/launch/: open_manipulator_x_controller.launch.py
src/open_manipulator/open_manipulator_x_controller/src/: open_manipulator_x_controller.cpp
src/open_manipulator/open_manipulator_x_libs/include/open_manipulator_x_libs/: open_manipulator_x.hpp
src/open_manipulator/open_manipulator_x_libs/src/: kinematics.cpp  open_manipulator_x.cpp
src/open_manipulator/open_manipulator_x_teleop/: package.xml  setup.py
src/open_manipulator/open_manipulator_x_teleop/open_manipulator_x_teleop/script/: coordi_motion.py  teleop_keyboard.py  test.ipynb  test_node.py
src/open_manipulator_msgs/: CMakeLists.txt
src/open_manipulator_msgs/srv/: Getgripper.srv  Setarmpos.srv  Setgripperpos.srv
src/robotis_manipulator/src/robotis_manipulator/: robotis_manipulator.cpp
visual_kinematics/examples/: analytical_inv.py  forward.py  inverse.py  readme.txt  test.ipynb
